src/components/RepExercise.css
.container {
    flex: 1 1 auto;
    align-items: baseline;
    display: grid;
    grid-template-columns: 0.8fr 1fr 1.6fr 1fr 0.6fr;
    grid-template-rows: 0.4fr 1.6fr 0.6fr 1.4fr;
    gap: 5px 0px;
    grid-template-areas: ". . . . ." ". repLabel repCount . ." ". setLabel setCount . ." ". . . . .";
    gap: 10px 10px;
}

.content {
    display: flex;
    flex-flow: column;
    height: 100%;
}

.setLabel, .repLabel {
    font-weight: bold;
    text-align: right !important;
}

.setLabel, .repLabel, .setCount {
    font-size: 32px;
}

.setCount, .repCount {
    text-align: center !important;
}

.setLabel {
    grid-area: setLabel;
}

.setCount {
    grid-area: setCount;
}

.repCount {
    grid-area: repCount;
    color: var(--ion-color-primary);
    font-size: 128px;
}

.repLabel {
    grid-area: repLabel;
}

